--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ header{
 
 .cart{
   position:fixed;
-  right:-350px;
+  right:-360px;
   top:0;
   width:350px;
   height:100%;
@@ -81,6 +81,7 @@ header{
   box-shadow:-5px 0 20px rgba(0,0,0,0.2);
   display:flex;
   flex-direction:column;
+  overflow:hidden;
 }
 
 .cart.open{
@@ -103,3 +104,4 @@ header{
 .cart-footer{
   margin-top:auto;
 }
+
